# coursework

./: CMakeLists.txt  LTexture.cpp  LTexture.h  Ltexture_button .h  Ltexture_button.cpp  Ltexture_window.cpp  Ltexture_window.h  README.md  Stroka.cpp  Stroka.h  coursework.vcxproj  coursework.vcxproj.filters  postfix.cpp  postfix.h  stroka_dec.cpp  stroka_dec.h  visual.cpp
